[project]
name = "tool_agent_demo"
version = "0.1.0"
description = "Tool Agent Demo"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:jupyter_client.*:",
    "ignore::pytest.PytestCollectionWarning",
]
markers = ["no_collect: mark a class to not be collected as a test class"]
